<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.add.AddAndEditRecipeFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/addEditToolBar"
        app:title="@string/add_new_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="180dp">

                <ImageView
                    android:id="@+id/ivRecipe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/photo_description" />

                <ImageView
                    android:id="@+id/ivTakePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/photo_description"
                    android:padding="24dp"
                    android:src="@drawable/ic_baseline_photo_camera_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/etRecipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_recipe_name" />

            <EditText
                android:id="@+id/etIngredients"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="16dp"
                android:hint="@string/hint_enter_required_ingredients" />

            <EditText
                android:id="@+id/etSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/hint_enter_step_by_step"
                android:minHeight="120dp" />

            <Button
                android:id="@+id/btSaveRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="40dp"
                android:enabled="false"
                android:text="@string/save_recipe" />

            <Button
                android:id="@+id/btDeleteRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="40dp"
                android:text="@string/delete_recipe"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>